--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,19 +6,18 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-    <link rel = "./src/css/style.css" type = "text/css" rel = "stylesheet">
+    <link rel = "./src/css/style.css" type = "text/css" rel = "style">
 
     <link rel ="./src/jd/Card.js" type ="text/js">
 
 </head>
 
 <body>
-
-        <fieldset>
            <section id="main">
                <div id ="cardsdelt"></div>
            </section>
 
+        <fieldset>
             <p>
                 <label>Player Choice</label>
                 <input type = "text"
