Working on getting the deck to print out.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,20 +13,9 @@
 </head>
 
 <body>
-           <section id="main">
-               <div id ="cardsdelt"></div>
-           </section>
+        <div id ="cardsdelt">
 
-        <fieldset>
-            <p>
-                <label>Player Choice</label>
-                <input type = "text"
-                       id = "playerText"
-                       value = "Text here" />
-            </p>
-
-        </fieldset>
-
+        </div>
 
 </body>
 
